--- a/Clases/20230922.html
+++ b/Clases/20230922.html
@@ -16,6 +16,7 @@
             - cd .. NAVEGAR A UN DIRECTORIO DE NIVEL SUPERIOR
             - mkdir AÑADIR UN DIRECTORIO
             - rmdir BORRAR UN DIRECTORIO
+            - dir OBTENER INFORMACIÓN
 
         - INSTALACION DE GIT, CONTROL DE VERSIONES Y TRABAJAR DE MANERA COLABORATIVA
 
@@ -26,9 +27,9 @@
             - Git clone "url" CLONAMOS EL REPOSITORIO DE GITHUB EN EL PC LOCAL
             - Git status VEMOS QUE MODIFICACIONES HA HABIDO EN EL REPOSITORIO
             - Git add . AÑADIMOS ESAS MODIFICACIONES AL STAGING AREA
-            - Git commit -m "COMENTARIO" HACEMOS UN COMMIT DE LOS CAMBIO, LOS ACEPTAMOS
             - Git config user.name "Nombre" AÑADIMOS NOMBRE USUARIO
             - Git config user.email "EMAIL" AÑADIMOS EL EMAIL DE LA CUENTA DE GITHUB
+            - Git commit -m "COMENTARIO" HACEMOS UN COMMIT DE LOS CAMBIO, LOS ACEPTAMOS
             - Git push SUBIMOS LOS CAMBIOS A GITHUB
 
     
@@ -372,7 +373,7 @@ UN CÓDIGO SIN COMENTARIOS ES COMO UN LIBRO SIN ÍNDICE-->
 
 
         CUANDO TRABAJAMOS PARA ESTRUCTURAR UNA WEB Y NO TENEMOS AUN EL CONTENIDO,
-        PODEMOS BUSCAR EN LA WEB LOREN IPSUM Y COPIAR CONTENIDO LIBRE DE AUTORIA QUE 
+        PODEMOS BUSCAR EN LA WEB LOREM IPSUM Y COPIAR CONTENIDO LIBRE DE AUTORIA QUE 
         NOS SIRVA DE BASE PARA EL DESARROLLO
 
 
@@ -388,7 +389,8 @@ UN CÓDIGO SIN COMENTARIOS ES COMO UN LIBRO SIN ÍNDICE-->
         PARA LA PARTE INFERIOR EL <FOOTER>
         PARA EL MENU DE NAVEGACIÓN UTILIZAMOS LA ETIQUETA <NAV>
         CONTENIDO PRINCIPAL EN LA ETIQUETA <MAIN>
-        PARA LAS SECCIONES UTILIZAREMOS <SECTION> UTILIZAREMOS POR CADA SECCIÓN UN UNICO HX, COMO CONSEJO, PARA SEPARAR SECCIONES POR IMPORTANCIA DE CONTENIDO
+        PARA LAS SECCIONES UTILIZAREMOS <SECTION> UTILIZAREMOS POR CADA SECCIÓN UN UNICO HX, 
+        COMO CONSEJO, PARA SEPARAR SECCIONES POR IMPORTANCIA DE CONTENIDO
         <ARTICLE> PARA LAS NOTICIAS NORMALMENTE EN LOS BLOGS
         BARRA LATERAL COMO <ASIDE>
         UTILIZAREMOS <DIV> CUANDO NO PODAMOS UTILIZAR NINGUNO DE LOS ANTERIORES
@@ -423,27 +425,6 @@ UN CÓDIGO SIN COMENTARIOS ES COMO UN LIBRO SIN ÍNDICE-->
         CREAR TODOS LOS BOTONES
         ***********
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        *************
-        EJERCICIO
-        TERMINAR DE PONER TODOS LOS BOTONES QUE APARECEN
-        *************
 
         ICONOS E IMÁGENES
         
