--- a/Clases/20230925.html
+++ b/Clases/20230925.html
@@ -83,7 +83,7 @@ CREAR UNA HOJA DE ESTILOS A PARTE
 
         COMO ENLAZAMOS LA HOJA DE ESTILOS CON EL HTML?
             LE DAMOS INDICACIONES AL NAVEGADOR
-            <link href="css/styles.css" rel="styleshett">
+            <link href="css/styles.css" rel="stylesheet">
 
             LINK, ME DA INFO DE DONDE TENGO ALOJADA LA HOJA DE ESTILOS
             REL ME INDICA LA RELACION CON EL DOCUMENTO ACTUAL
