--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -38,6 +38,33 @@
 <body>
     <!-- <h1>Hola Mundo!</h1>
     <h2>Hola Mundo!</h2> -->
+<!-- 
+    <section class="seccionPrueba">
+        <h3>Ejercicio selectores h3</h3>
+        <h5>Ejercicio selectores h5</h5>
+        <p id="projo">Ejercicio selectores p</p>
+    </section>
+
+
+
+
+
+    <section class="ejercicioSelectores">
+        <h3 class="primerh3">primer h3</h3>
+        <h3 id="segundoh3">segundo h3</h3>
+        <h6>primer h6</h6>
+        <p>primer parrafo</p>
+        <img src="./img/Logo-Adecco.png">
+        <a href="">primer enlace</a>
+        <a href="">segundo enlace</a>
+        <div>
+            <a href="">tercer enlace</a>
+        </div>
+        
+    </section>
+ -->
+
+
     <header>
         
         <a href="#"> Log in Alumnos</a>
