--- a/Clases/20230922.html
+++ b/Clases/20230922.html
@@ -124,7 +124,7 @@ UN CÓDIGO SIN COMENTARIOS ES COMO UN LIBRO SIN ÍNDICE-->
 <body>
     <!-- ETIQUETA BODY PARA EL CONTENIDO, LO QUE VE EL USUARIO 
     
-    LINKED EDITING, CON CTRL + SHIFT + P PARA HACER QUE LA ETIQUETA DE APERTURA Y CIERRE
+     EDITING, CON CTRL + SHIFT + P PARA HACER QUE LA ETIQUETA DE APERTURA Y CIERRE
     SE MODIFIQUEN A LA VEZ-->
 
 
@@ -246,15 +246,15 @@ UN CÓDIGO SIN COMENTARIOS ES COMO UN LIBRO SIN ÍNDICE-->
 
 
     <section>
-        <h2 class="Mando">
+        <h2 class="ejercicioColor">
             Marketing Digital
         </h2>
 
-        <h2>
+        <h2 class="ejercicioColor">
             Programación de videojuegos, diseño 3d y realidad virtual
         </h2>
 
-        <h2>
+        <h2 class="ejercicioColor">
             Programación web Full Stack
         </h2>
     </section>
