--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -17,6 +17,14 @@
             /* MOSTRAR PROPIEDAD COLORE, VER COMO APARECE TACHADO PUES ES ERRONEO. */
         }
     </style> -->
+
+    <link rel="preload" href="css/normalize.css" as="style">
+    <link href="./css/normalize.css" rel="stylesheet">
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet"> -->
+
     <link rel="preload" href="css/styles.css" as="style">
     <link href="./css/style.css" rel="stylesheet">
 
@@ -78,7 +86,7 @@
     </header>
 
     <main>
-        <h1>Descubre la formación que te dará la oportunidad de convertirte en un profesional digital</h1>
+        <h1 class="ejercicioColor">Descubre la formación que te dará la oportunidad de convertirte en un profesional digital</h1>
 
         <a href="https://www.tucarreradigital.es/zona-centro#cursos">Ver Cursos</a>
 
@@ -90,11 +98,11 @@
         <h3>Cursos</h3>
         <a href="#">Ver Todo</a>
         <a href="#">Madrid</a>
-        <h2>Marketing Digital</h2>
+        <h2 class="ejercicioColor">Marketing Digital</h2>
         <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
-        <h2>PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
+        <h2 class="ejercicioColor">PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
         <a href="https://www.tucarreradigital.es/zona-centro/curso-programacion-de-videojuegos-diseno-3d-y-realidad-virtual#cursos">Inscribirme</a>
-        <h2>PROGRAMACIÓN WEB FULL STACK</h2>
+        <h2 class="ejercicioColor">PROGRAMACIÓN WEB FULL STACK</h2>
         <a href="https://www.tucarreradigital.es/zona-centro/curso-programacion-web-full-stack#cursos">Inscribirme</a>
     </section>
 
