--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -85,13 +85,36 @@
 
     </header>
 
-    <main class="fondoMain">
-        <h1 class="ejercicioColor">Descubre la formación que te dará la oportunidad de convertirte en un profesional
-            digital</h1>
 
-        <a href="https://www.tucarreradigital.es/zona-centro#cursos">Ver Cursos</a>
+
+
+    <!-- BANNER PRINCIPAL  -->
+
+    <main class="fondoMain">
+
+        <div class="contenedor">
+
+            <div class="margenDerecho">
+                <h1 >Descubre la formación que te dará la oportunidad de convertirte en un
+                    profesional
+                    digital</h1>
+
+                <img src="./img/ico-centro.png">
+                <a href="https://www.tucarreradigital.es/zona-centro#cursos">Ver Cursos</a>
+            </div>
+
+        </div>
 
     </main>
+
+
+
+
+
+
+
+
+
 
     <img src="./img/Logos-oficiales.png" alt="Logos oficiales tu carrera digital">
 
@@ -150,10 +173,22 @@
         </div>
     </section>
 
+    <!-- 
+    <section class="fondo-amarillo">
+        <div class="contenedor">
+            <h1>hola</h1>
+        </div>
+    </section>
+
+    <section class="contenedor">
+        <div class="fondo-azul">
+            <h1>hola</h1>
+        </div>
+    </section> -->
 
 
 
-    
+
 
 
 
