--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -115,7 +115,7 @@
 
 
 
-
+    <!-- SECCION DE IMAGENES DE CORPORACIONES  -->
 
     <section class="logos contenedor">
         <img src="./img/Logos-oficiales.png" alt="Logos oficiales tu carrera digital">
@@ -126,25 +126,35 @@
 
 
 
+    <!-- SECCION DE CURSOS  -->
 
     <section class="seccionCursos contenedor">
         <h3>Cursos</h3>
         <h2>Cambia tu futuro</h2>
-        <a href="#">Ver Todo</a>
-        <a href="#">Madrid</a>
 
-        <div>
-            <h2>Marketing Digital</h2>
-            <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
-            <h2>PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
-            <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+        <div class="botonesCursos">
+            <a class="botonVerTodo" href="#">Ver Todo</a>
+            <a class="botonMadrid" href="#">Madrid</a>
         </div>
 
+        <div class="cursosOfertados">
+            <div class="marketing">
+                <h2>Marketing Digital</h2>
+                <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+            </div>
+
+            <div class="videojuegos">
+                <h2>PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
+                <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+            </div>
+        </div>
 
     </section>
 
+<!-- 
+<section class="ejercicioMax"> -->
 
-
+</section>
 
 
     <section>
