--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -140,21 +140,25 @@
         <div class="cursosOfertados">
             <div class="marketing">
                 <h2>Marketing Digital</h2>
-                <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+                <div>
+                    <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+                </div>
             </div>
 
             <div class="videojuegos">
                 <h2>PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
-                <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+                <div>
+                    <a href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos">Inscribirme</a>
+                </div>
             </div>
         </div>
 
     </section>
 
-<!-- 
+    <!-- 
 <section class="ejercicioMax"> -->
 
-</section>
+    </section>
 
 
     <section>
