--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -155,16 +155,42 @@
 
     </section>
 
-    <!-- 
-<section class="ejercicioMax"> -->
 
-    </section>
+    <!-- SECCION PIDENOSLO  -->
 
-
-    <section>
+    <section class="pidenoslo">
         <h3>¿TE INTERESA ALGÚN OTRO CURSO EN TU CIUDAD?</h3>
-        <a href="#">¡Pídenoslo!</a>
+        <div>
+            <a href="#">¡Pídenoslo!</a>
+        </div>
+
     </section>
+
+    <!-- <section class="ejercicioColumna">
+        <h3>HOLA</h3>
+        <a href="">HOLA ENLACE</a>
+    </section> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SzZlMSDKE8o?si=lTym8yOjZm9oPMQD"
