--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -324,6 +324,13 @@
 
 
 
+<section class="ejercicioFlexRow">
+    <h5>FLEX</h5>
+</section>
+
+<section  class="ejercicioFlexColumn">
+    <h5>FLEX</h5>
+</section>
 
 
 
