--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -192,8 +192,8 @@
 
 
 
-    <section>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SzZlMSDKE8o?si=lTym8yOjZm9oPMQD"
+    <section class="video">
+        <iframe width="1120" height="630" src="https://www.youtube.com/embed/SzZlMSDKE8o?si=lTym8yOjZm9oPMQD"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
