--- a/pontealdia/index.html
+++ b/pontealdia/index.html
@@ -34,8 +34,12 @@
                 <h2>selectores</h2>
             </div>
         </div>
-        <div><h2>selectores</h2></div>
-        <div><h2>selectores</h2></div>
+        <div>
+            <h2>selectores</h2>
+        </div>
+        <div>
+            <h2>selectores</h2>
+        </div>
     </section>
 
 
@@ -50,30 +54,76 @@
 
 
 
-<!-- EJERCION DISPLAYS INLINE Y BLOCK  -->
+    <!-- EJERCION DISPLAYS INLINE Y BLOCK  -->
 
-<section class="seccionDisplays">
-    <p>DISPLAYS</p>
-    <a href="">DISPLAYS</a>
-    <h1>DISPLAYS</h1>
-    <h3>DISPLAYS</h3>
-    <h6>DISPLAYS</h6>
-    <div>
+    <section class="seccionDisplays">
         <p>DISPLAYS</p>
-    </div>
-</section>
+        <a href="">DISPLAYS</a>
+        <h1>DISPLAYS</h1>
+        <h3>DISPLAYS</h3>
+        <h6>DISPLAYS</h6>
+        <div>
+            <p>DISPLAYS</p>
+        </div>
+    </section>
 
-<section class="seccionDisplaysCambio">
-    <p>DISPLAYS MODIFICADO</p>
-    <a href="">DISPLAYS MODIFICADO</a>
-    <h1>DISPLAYS MODIFICADO</h1>
-    <h3>DISPLAYS MODIFICADO</h3>
-    <h6>DISPLAYS MODIFICADO</h6>
-    <div>
+
+
+    <!-- EJERCICIO 1 -->
+    <section class="porcentajes">
+        <div class="seccionP1">
+            <p>20% PORCENTAJE</p>
+        </div>
+        <div class="seccionP2">
+            <p>30% PORCENTAJE</p>
+        </div>
+        <div class="seccionP3">
+            <p>50% PORCENTAJE</p>
+        </div>
+    </section>
+
+    <!-- EJERCICIO 2 -->
+
+    <section class="altura">
+
+        <div class="altura1">
+            <p>ALTURA1</p>
+        </div>
+
+        <div class="altura2">
+            <p>ALTURA2</p>
+        </div>
+
+    </section>
+
+    
+
+
+
+
+
+    <section class="seccionDisplaysCambio">
         <p>DISPLAYS MODIFICADO</p>
-    </div>
-</section>
+        <a href="">DISPLAYS MODIFICADO</a>
+        <h1>DISPLAYS MODIFICADO</h1>
+        <h3>DISPLAYS MODIFICADO</h3>
+        <h6>DISPLAYS MODIFICADO</h6>
+        <div>
+            <p>DISPLAYS MODIFICADO</p>
+        </div>
+    </section>
 
+    <section class="ejemplo3">
+
+        <div class="primerdiv">
+            <h3>ULTIMO EJEMPLO</h3>
+        </div>
+        <div class="segundodiv">
+            <p class="parrafo1">ULTIMO PARRAFO 1</p>
+            <p class="parrafo2">ULTIMO PARRAFO 2</p>
+        </div>
+
+    </section>
 
 </body>
 
