--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -73,21 +73,35 @@
  -->
 
 
-    <header>
+    <header class="seccionHeader contenedor">
 
-        <a href="#"> Log in Alumnos</a>
-        <a href="#"> Log in Empresas</a>
-        <a href="#"><img src="img/Tu-carrera-digital-general.png"></a>
-        <a href="#">Cursos</a>
-        <a href="#">Sobre Nosotros</a>
-        <a href="#">Infórmate</a>
+        <div class="seccionImagen">
+            <a href="#"><img src="img/Tu-carrera-digital-general.png"></a>
+
+        </div>
+
+        <div class="seccionEnlaces">
+
+            <div class="seccionLogin">
+                <a href="#"> Log in Alumnos | </a>
+
+                <a href="#"> Log in Empresas</a>
+            </div>
+
+            <div class="seccionNav">
+                <a href="#">Cursos</a>
+                <a href="#">Sobre Nosotros</a>
+                <a class="botonInformate" href="#">Infórmate</a>
+            </div>
+
+        </div>
 
 
     </header>
 
 
 
-    
+
 
 
 
