--- a/pontealdia/index.html
+++ b/pontealdia/index.html
@@ -14,6 +14,12 @@
 <body>
 
 
+ <section class="ejercicioaquari">
+
+    <h3>ALOOOOO</h3>
+ </section>
+
+
     <!-- EJERCICIO DE SELECTOR DE CADENA DESCENDENTE Y TODOS LOS HIJOS  -->
     <section class="CADENADESCENDENTE">
         <div>
