--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -76,7 +76,7 @@
     <header class="seccionHeader contenedor">
 
 
-        
+
 
         <div class="seccionImagen">
             <a href="#"><img src="img/Tu-carrera-digital-general.png"></a>
@@ -178,7 +178,7 @@
 
     <!-- SECCION PIDENOSLO  -->
 
-    <section class="pidenoslo">
+    <section class="pidenoslo contenedor">
         <h3>¿TE INTERESA ALGÚN OTRO CURSO EN TU CIUDAD?</h3>
         <div>
             <a href="#">¡Pídenoslo!</a>
@@ -212,7 +212,7 @@
 
 
 
-    <section class="video">
+    <section class="video contenedor">
         <iframe width="1120" height="630" src="https://www.youtube.com/embed/SzZlMSDKE8o?si=lTym8yOjZm9oPMQD"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
