--- a/pontealdia/index.html
+++ b/pontealdia/index.html
@@ -136,6 +136,73 @@
     <div></div>
 </section>
 
+
+
+
+
+
+
+
+
+<section class="ejercicioGrid">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+
+<section class="ejercicioGrid1">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+
+
+
+<section class="ejercicioGrid2">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+
+
+
+
+
+<section class="ejercicioRepeat">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+
+
+
+
+
+
+
+
 </body>
 
 </html>
