--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet"> -->
 
-    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="preload" href="css/style.css" as="style">
     <link href="./css/style.css" rel="stylesheet">
 
 
@@ -303,6 +303,7 @@
                 <h3>Madrid</h3>
                 <p>CALLE DEL MARQUÉS DE AHUMADA 7 PLANTA BAJA AULA 15 28028, MADRID, MADRID.</p>
             </div>
+            
         </div>
     </section>
     <!-- 
