--- a/proyectoinicio/index.html
+++ b/proyectoinicio/index.html
@@ -412,6 +412,35 @@
     </section> -->
 
 
+<section class="repaso">
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div class="ultimoDiv"></div>
+</section>
+
+
+
+<section class="repasoGrid">
+    <div class="primerD">Texto 1</div>
+    <div class="segundoD">Texto 2</div>
+    <div class="tercerD">Texto 3</div>
+    <div class="cuartoD">Texto 4</div>
+    <div class="quintoD">Texto 5</div>
+    <div class="sextoD">Texto 6</div>
+</section>
+
+<section class="ejercicioMover">
+    <div class="ejercicioMover1">Texto 1</div>
+    <div class="ejercicioMover2">Texto 2</div>
+    <div class="ejercicioMover3">Texto 3</div>
+    <div class="ejercicioMover4">Texto 4</div>
+    <div class="ejercicioMover5">Texto 5</div>
+</section>
+
+
+
 
 
 
