--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 
-    <script src="./js/01-variables.js"></script>
+    <!-- <script src="./js/01-variables.js"></script> -->
+    <script src="./js/02-tipos-de-datos.js"></script>
     
 </body>
 </html>
