--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 
-    <!-- <script src="./js/01-variables.js"></script> -->
+    <div class="slider">
+        <div class="slide" id="slide1"></div>
+        <div class="slide" id="slide2"></div>
+        <div class="slide" id="slide3"></div>
+    </div>
+    
     <script src="./js/02-tipos-de-datos.js"></script>
     
 </body>
