--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -16,8 +16,9 @@
         <div class="slide" id="slide2"></div>
         <div class="slide" id="slide3"></div>
     </div>
-    
-    <script src="./js/02-tipos-de-datos.js"></script>
+
+    <!-- <script src="./js/02-tipos-de-datos.js"></script> -->
+    <script src="./js/03-objetos.js"></script>
     
 </body>
 </html>
