--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -18,7 +18,8 @@
     </div>
 
     <!-- <script src="./js/02-tipos-de-datos.js"></script> -->
-    <script src="./js/03-objetos.js"></script>
+    <!-- <script src="./js/03-objetos.js"></script> -->
+    <script src="./js/04-arrays.js"></script>
     
 </body>
 </html>
