--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -21,7 +21,8 @@
     <!-- <script src="./js/03-objetos.js"></script> -->
     <!-- <script src="./js/04-arrays.js"></script> -->
     <!-- <script src="./js/05-funciones.js"></script> -->
-    <script src="./js/06-estructuras-control.js"></script>
+    <!-- <script src="./js/06-estructuras-control.js"></script> -->
+    <script src="./js/07-ejercicios-funciones.js"></script>
     
 </body>
 </html>
