--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -23,7 +23,8 @@
     <!-- <script src="./js/05-funciones.js"></script> -->
     <!-- <script src="./js/06-estructuras-control.js"></script> -->
     <!-- <script src="./js/07-ejercicios-funciones.js"></script> -->
-    <script src="./js/08-foreach-map-this.js"></script>
+    <!-- <script src="./js/08-foreach-map-this.js"></script> -->
+    <script src="./js/09-poo.js"></script>
     
 </body>
 </html>
