--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+    <a href="#" id="boton">BOTON NOTIFICACIONES</a>
+
     <div class="slider">
         <div class="slide" id="slide1"></div>
         <div class="slide" id="slide2"></div>
@@ -24,7 +26,8 @@
     <!-- <script src="./js/06-estructuras-control.js"></script> -->
     <!-- <script src="./js/07-ejercicios-funciones.js"></script> -->
     <!-- <script src="./js/08-foreach-map-this.js"></script> -->
-    <script src="./js/09-poo.js"></script>
+    <!-- <script src="./js/09-poo.js"></script> -->
+    <script src="./js/10-promises.js"></script>
     
 </body>
 </html>
