--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -11,13 +11,26 @@
 </head>
 <body>
 
+    <section class="seccionPrincipal">
+
+        <h1>TITULO H1</h1>
+        <a href="#" id="botonPrincipal" class="botonClass">BOTON PRINCIPAL</a>
+
+        <div class="navPrincipal">
+            <a class="enlace" href="#">ENLACE1</a>
+            <a class="enlace" href="#">ENLACE2</a>
+            <a class="enlace" href="#">ENLACE3</a>
+        </div>
+
+    </section>
+<!-- 
     <a href="#" id="boton">BOTON NOTIFICACIONES</a>
 
     <div class="slider">
         <div class="slide" id="slide1"></div>
         <div class="slide" id="slide2"></div>
         <div class="slide" id="slide3"></div>
-    </div>
+    </div> -->
 
     <!-- <script src="./js/02-tipos-de-datos.js"></script> -->
     <!-- <script src="./js/03-objetos.js"></script> -->
@@ -27,7 +40,9 @@
     <!-- <script src="./js/07-ejercicios-funciones.js"></script> -->
     <!-- <script src="./js/08-foreach-map-this.js"></script> -->
     <!-- <script src="./js/09-poo.js"></script> -->
-    <script src="./js/10-promises.js"></script>
+    <!-- <script src="./js/10-promises.js"></script> -->
+    <!-- <script src="./js/11-fetch-api.js"></script> -->
+    <script src="./js/12-dom.js"></script>
     
 </body>
 </html>
