--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -23,6 +23,43 @@
         </div>
 
     </section>
+
+    <section class="espaciador">
+
+        <p>hola</p>
+
+    </section>
+
+    <form>
+
+        <fieldset> 
+            <!-- AGRUPAR TODOS LOS ELEMENTOS DEL FORMULARIO -->
+
+            <legend> Contáctanos rellenando todos los campos </legend> 
+            <!-- DESCRIBIR EL FORMULARIO -->
+
+            <div> 
+                <!-- PARA AGRUPAR LOS DIFERENTES INPUTS -->
+                <div>
+                    <label> Nombre </label>    
+                    <!-- ETIQUETA -->
+                    <input id="Nombre" type="Text" placeholder="Tu Nombre"> 
+                    <!-- CAMPO DONDE SE ESCRIBEM PLACEHOLDER, LA INDICACIÓN -->
+                </div>
+                <div>
+                    <label> Correo </label>
+                    <input type="email" placeholder="Tu Email">
+                </div>
+                <div>
+                    <label> Mensaje </label>
+                    <textarea></textarea>
+                </div>
+            </div>
+            <div>
+                <input class="botonFormulario" type="submit" value="Enviar">
+            </div>
+        </fieldset>
+    </form>
 <!-- 
     <a href="#" id="boton">BOTON NOTIFICACIONES</a>
 
@@ -42,7 +79,8 @@
     <!-- <script src="./js/09-poo.js"></script> -->
     <!-- <script src="./js/10-promises.js"></script> -->
     <!-- <script src="./js/11-fetch-api.js"></script> -->
-    <script src="./js/12-dom.js"></script>
+    <!-- <script src="./js/12-dom.js"></script> -->
+    <script src="./js/13-eventos.js"></script>
     
 </body>
 </html>
