--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -24,20 +24,17 @@
 
     </section>
 
-    <section class="espaciador">
+    <!-- <section class="espaciador">
 
         <p>hola</p>
 
-    </section>
+    </section> -->
 
     <form>
-
         <fieldset> 
             <!-- AGRUPAR TODOS LOS ELEMENTOS DEL FORMULARIO -->
-
             <legend> Contáctanos rellenando todos los campos </legend> 
             <!-- DESCRIBIR EL FORMULARIO -->
-
             <div> 
                 <!-- PARA AGRUPAR LOS DIFERENTES INPUTS -->
                 <div>
@@ -48,11 +45,11 @@
                 </div>
                 <div>
                     <label> Correo </label>
-                    <input type="email" placeholder="Tu Email">
+                    <input id="Email" type="email" placeholder="Tu Email">
                 </div>
                 <div>
                     <label> Mensaje </label>
-                    <textarea></textarea>
+                    <textarea id="Mensaje"></textarea>
                 </div>
             </div>
             <div>
@@ -60,6 +57,9 @@
             </div>
         </fieldset>
     </form>
+    <p class="parrafo">
+
+    </p>
 <!-- 
     <a href="#" id="boton">BOTON NOTIFICACIONES</a>
 
