--- a/proyectojavascript/index.html
+++ b/proyectojavascript/index.html
@@ -60,6 +60,10 @@
     <p class="parrafo">
 
     </p>
+
+    <section class="zonas">
+
+    </section>
 <!-- 
     <a href="#" id="boton">BOTON NOTIFICACIONES</a>
 
